src/syntax_analysis/tests/snapshots/monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_tokens_input_edgecases_case1.snap
---
source: src/syntax_analysis/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::LexicalAnalysis::from(code))"

---
AbstractSyntaxTree {
    abstract_syntax_tree: [],
    syntax_parsing_errors: [],
}
