src/syntax_analysis/tests/snapshots/monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_tokens_input_edgecases_case2.snap
---
source: src/syntax_analysis/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
AbstractSyntaxTree {
    abstract_syntax_tree: [],
    syntax_parsing_errors: [
        "Syntax error : Do not know how to parse SemiColon as an expression.",
    ],
}
